setup initial architecture

--- a/package.json
+++ b/package.json
@@ -35,27 +35,29 @@
     "aws-sdk": "^2.62.0",
     "base64-js": "^1.2.0",
     "body-parser": "^1.17.2",
-    "chai": "^4.0.1",
-    "chai-moment": "^0.1.0",
     "cors": "^2.8.3",
     "cred": "^0.5.6",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "express-rate-limit": "^2.8.0",
-    "gulp": "^3.9.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.4.2",
     "morgan": "^1.8.2",
     "node-fetch": "^1.7.1",
     "pg": "^6.2.3",
-    "require-dir": "^0.3.2",
     "sequelize": "^3.30.4",
     "sequelize-cli": "^2.7.0",
-    "sequelize-fixtures": "^0.5.6",
     "showdown": "^1.7.1",
+    "validator": "^7.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.0.1",
+    "chai-moment": "^0.1.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.4.2",
+    "require-dir": "^0.3.2",
+    "sequelize-fixtures": "^0.5.6",
     "supertest": "^3.0.0",
     "supertest-as-promised": "^4.0.2",
-    "validator": "^7.0.0",
     "yargs": "^8.0.1"
   }
 }
