--- a/package.json
+++ b/package.json
@@ -51,13 +51,21 @@
   "devDependencies": {
     "chai": "^4.0.1",
     "chai-moment": "^0.1.0",
+    "del": "^3.0.0",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-if": "^2.0.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-uglify": "^3.0.0",
     "istanbul": "^0.4.5",
+    "merge-stream": "^1.0.1",
     "mocha": "^3.4.2",
     "require-dir": "^0.3.2",
     "sequelize-fixtures": "^0.5.6",
     "supertest": "^3.0.0",
-    "supertest-as-promised": "^4.0.2",
     "yargs": "^8.0.1"
   }
 }
