--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "express-rate-limit": "^2.8.0",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "node-fetch": "^1.7.1",
     "pg": "^6.2.3",
